Fixed overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,8 @@
 }
 body {
   background-color: #000000;
-  /*cursor: url("./assets/images/cursor2.png") 16 16, auto;*/
+  width: 100vw;
+  height: 100vh;
 }
 #root{
   margin: 0;
